Adição de imagem dos Pokemons e funcionalidade de atualização da mesma.

--- a/PokeStoreClient/bower.json
+++ b/PokeStoreClient/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "PokeStoreClient",
+  "name": "pokestoreclient",
   "description": "A AngularJS client for PokeStoreAPI",
   "version": "0.0.0",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "angular-resource": "1.5.x",
     "angular-route": "1.5.x",
     "bootstrap": "3.3.x",
-    "jquery": "2.2.x"
+    "jquery": "2.2.x",
+    "ng-file-upload": "^12.2.13"
   }
 }
