--- a/PokeStoreAPI/package.json
+++ b/PokeStoreAPI/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^2.0.0",
     "express": "*",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "request": "^2.73.0",
     "request-promise": "^4.0.0",
