--- a/PokeStoreClient/package.json
+++ b/PokeStoreClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PokeStoreClient",
+  "name": "pokestoreclient",
   "private": true,
   "version": "0.0.0",
   "description": "A AngularJS client for PokeStoreAPI",
